...
        )
    }
    return(
        <View style={{flex:1,backgroundColor:'white'}}>
            <NewMessageModal/>
            <ScrollView>
                <Text testID="mainHelloText">Main screen</Text>
                <MessageList messages={props.messages.messageArray}/>
            </ScrollView>
            <NewMessageButt />
        </View>

    )
...
